--- a/naver_review_(원본).ipynb
+++ b/naver_review_(원본).ipynb
@@ -18,18 +18,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\hare0\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\requests\\__init__.py:109: RequestsDependencyWarning: urllib3 (1.26.12) or chardet (5.2.0)/charset_normalizer (2.0.12) doesn't match a supported version!\n",
-      "  warnings.warn(\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from selenium import webdriver\n",
     "from webdriver_manager.chrome import ChromeDriverManager\n",
@@ -46,12 +37,53 @@
     "import requests\n",
     "from openpyxl import Workbook\n",
     "from bs4 import BeautifulSoup\n",
-    "import pandas as pd"
+    "import pandas as pd "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# --------------- test -------------------"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "검색 가능한 매장 숫자 4460\n"
+     ]
+    }
+   ],
+   "source": [
+    "res_df = pd.read_excel('combined_file1_22.xlsx')\n",
+    "res_df = res_df.loc[res_df['검색여부']=='가능',:]\n",
+    "res_df.head(5)\n",
+    "print('검색 가능한 매장 숫자',len(res_df))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i in range(0,len(res_df)):\n",
+    "    # 검색어를 네이버 url에 포함시켜 이동 + 검색 \n",
+    "    \n",
+    "    name = res_df['상세주소'][i] + ' ' + res_df['사업장명'][i]\n",
+    "    # name = '논현로159길10,' + ' ' + '만소당\t'\n",
+    "    driver.get('https://map.naver.com/p/search/{}'.format(name))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -131,163 +163,37 @@
        "      <td>가성비가 좋아요</td>\n",
        "      <td>257</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>매장이 청결해요</td>\n",
-       "      <td>241</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>매장이 넓어요</td>\n",
-       "      <td>208</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>특별한 메뉴가 있어요</td>\n",
-       "      <td>130</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>양이 많아요</td>\n",
-       "      <td>125</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>인테리어가 멋져요</td>\n",
-       "      <td>42</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>건강한 맛이에요</td>\n",
-       "      <td>20</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11</th>\n",
-       "      <td>뷰가 좋아요</td>\n",
-       "      <td>19</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12</th>\n",
-       "      <td>화장실이 깨끗해요</td>\n",
-       "      <td>13</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>13</th>\n",
-       "      <td>주차하기 편해요</td>\n",
-       "      <td>11</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14</th>\n",
-       "      <td>단체모임 하기 좋아요</td>\n",
-       "      <td>11</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>15</th>\n",
-       "      <td>특별한 날 가기 좋아요</td>\n",
-       "      <td>10</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>16</th>\n",
-       "      <td>음식이 빨리 나와요</td>\n",
-       "      <td>7</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>17</th>\n",
-       "      <td>메뉴 구성이 알차요</td>\n",
-       "      <td>5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>18</th>\n",
-       "      <td>포장이 깔끔해요</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>19</th>\n",
-       "      <td>아늑해요</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>20</th>\n",
-       "      <td>비싼 만큼 가치있어요</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>21</th>\n",
-       "      <td>대화하기 좋아요</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>22</th>\n",
-       "      <td>커피가 맛있어요</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>23</th>\n",
-       "      <td>야외 공간이 멋져요</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>24</th>\n",
-       "      <td>향신료가 강하지 않아요</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>25</th>\n",
-       "      <td>직접 잘 구워줘요</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "             tag    인원\n",
-       "0       음식이 맛있어요  1131\n",
-       "1       재료가 신선해요   735\n",
-       "2       혼밥하기 좋아요   618\n",
-       "3           친절해요   301\n",
-       "4       가성비가 좋아요   257\n",
-       "5       매장이 청결해요   241\n",
-       "6        매장이 넓어요   208\n",
-       "7    특별한 메뉴가 있어요   130\n",
-       "8         양이 많아요   125\n",
-       "9      인테리어가 멋져요    42\n",
-       "10      건강한 맛이에요    20\n",
-       "11        뷰가 좋아요    19\n",
-       "12     화장실이 깨끗해요    13\n",
-       "13      주차하기 편해요    11\n",
-       "14   단체모임 하기 좋아요    11\n",
-       "15  특별한 날 가기 좋아요    10\n",
-       "16    음식이 빨리 나와요     7\n",
-       "17    메뉴 구성이 알차요     5\n",
-       "18      포장이 깔끔해요     3\n",
-       "19          아늑해요     2\n",
-       "20   비싼 만큼 가치있어요     2\n",
-       "21      대화하기 좋아요     2\n",
-       "22      커피가 맛있어요     1\n",
-       "23    야외 공간이 멋져요     1\n",
-       "24  향신료가 강하지 않아요     1\n",
-       "25     직접 잘 구워줘요     1"
+       "        tag    인원\n",
+       "0  음식이 맛있어요  1131\n",
+       "1  재료가 신선해요   735\n",
+       "2  혼밥하기 좋아요   618\n",
+       "3      친절해요   301\n",
+       "4  가성비가 좋아요   257"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# tag - 이런점이 좋았어요 가져오기 \n",
-    "# tag 끝까지 나오게 클릭 \n",
-    "try :\n",
-    "    while driver.find_elements(By.CLASS_NAME, 'Tvx37'):\n",
-    "        try:\n",
-    "            button = driver.find_element(By.XPATH, '//*[@id=\"app-root\"]/div/div/div/div[6]/div[2]/div[1]/div/div/div[2]/a[1]')\n",
-    "            button.click()\n",
-    "            time.sleep(0.4)\n",
-    "        except ElementClickInterceptedException:\n",
-    "            break\n",
-    "except NoSuchElementException:\n",
-    "    print(\"No more '더보기' button found. Exiting the loop.\")\n",
+    "# # tag - 이런점이 좋았어요 가져오기 \n",
+    "# # tag 끝까지 나오게 클릭 \n",
+    "# try :\n",
+    "#     while driver.find_elements(By.CLASS_NAME, 'Tvx37'):\n",
+    "#         try:\n",
+    "#             button = driver.find_element(By.XPATH, '//*[@id=\"app-root\"]/div/div/div/div[6]/div[2]/div[1]/div/div/div[2]/a[1]')\n",
+    "#             button.click()\n",
+    "#             time.sleep(0.4)\n",
+    "#         except ElementClickInterceptedException:\n",
+    "#             break\n",
+    "# except NoSuchElementException:\n",
+    "#     print(\"No more '더보기' button found. Exiting the loop.\")\n",
     "\n",
     "# tag 불러오기 \n",
     "html = driver.page_source\n",
